# technezis-test

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: f5f47220daba_init_db.py
app/handlers/: handle_doc.py  ping.py
app/schemes/: source_schemes.py
app/services/: excel_service.py
database/: core.py  crud.py  models.py
settings/: loader.py
